<resources>
    <string name="app_name">SmartLaundry</string>
    <string name="email">Email</string>
    <string name="smart_laundry_login">Smart Laundry Login</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="belum_punya_akun">Belum Punya Akun ?</string>
    <string name="reset_disini">Reset Disini !</string>
    <string name="lupa_password">Lupa Password ?</string>
    <string name="form_register">Form Register</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="no_handphone">No Handphone</string>
    <string name="alamat">Alamat</string>
    <string name="submit">Submit</string>
    <string name="sudah_punya_akun">Sudah Punya Akun ?</string>
    <string name="login_disini">Login Disini !</string>
    <string name="input_email_terdaftar_anda_untuk_melakukan_reset_password">Input Email Terdaftar Anda Untuk Melakukan Reset Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="form_pemesanan">Form Pemesanan</string>
    <string name="cuci">Cuci Kering</string>
    <string name="setrika">Cuci Setrika</string>
    <string name="transfer">Transfer</string>
    <string name="cash">Cash</string>
    <string name="input_alamat">Input Alamat</string>
    <string name="input_no_hp">Input No HP</string>
    <string-array name="array_update">
        <item>Proses</item>
        <item>Selesai</item>
    </string-array>
</resources>