<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.order.OrderActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                android:elevation="@dimen/_6sdp"
                android:fontFamily="@font/dosis_semibold"
                android:gravity="center"
                android:text="@string/form_pemesanan"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:id="@+id/rcv_product_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp" />

            <RelativeLayout
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/headpay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dosis_semibold"
                    android:text="Total Pembayaran :"
                    android:textSize="@dimen/_12ssp" />
                <TextView
                    android:id="@+id/tv_order_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/dosis_semibold"
                    android:layout_below="@id/headpay"
                    tools:text="Rp.20000"
                    android:text=""
                    android:textSize="@dimen/_12ssp" />

                <Button
                    android:id="@+id/order_btn_hitung"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Hitung"
                    android:fontFamily="@font/dosis_semibold"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/_10sdp"/>
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/dosis_semibold"
                android:text="Tipe Pesanan"
                android:textSize="@dimen/_12ssp" />

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:orientation="horizontal">


                <RadioButton
                    android:id="@+id/check_cuci"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:checked="true"
                    android:text="@string/cuci"
                    android:textSize="@dimen/_12ssp" />

                <RadioButton
                    android:id="@+id/check_setrika"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@string/setrika"
                    android:textSize="@dimen/_12ssp" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/dosis_semibold"
                android:text="Pilihan Pembayaran"
                android:textSize="@dimen/_12ssp" />

            <RadioGroup
                android:id="@+id/radioGroup2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:orientation="horizontal">


                <RadioButton
                    android:id="@+id/check_cash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:checked="true"
                    android:text="@string/cash"
                    android:textSize="@dimen/_12ssp" />

                <RadioButton
                    android:id="@+id/check_transfer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@string/transfer"
                    android:textSize="@dimen/_12ssp" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/dosis_semibold"
                android:text="@string/alamat"
                android:textSize="@dimen/_12ssp" />

            <EditText
                android:background="@color/white"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="60dp"
                android:padding="10dp"
                android:layout_marginStart="@dimen/_10sdp"
                android:hint="@string/input_alamat"
                android:inputType="text"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/dosis_semibold"
                android:text="@string/no_handphone"
                android:textSize="@dimen/_12ssp" />

            <EditText
                android:background="@color/white"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginStart="@dimen/_10sdp"
                android:hint="@string/input_no_hp"
                android:inputType="text"
                android:textColor="@color/black"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>