<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.auth.LoginActivity">

    <ImageView
        android:layout_width="@dimen/_160sdp"
        android:layout_height="@dimen/_160sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_50sdp"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:text="@string/input_email_terdaftar_anda_untuk_melakukan_reset_password"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:hint="@string/email"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_reset"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="match_parent"
            android:fontFamily="@font/dosis_semibold"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_submit_reset"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:text="@string/submit"
        android:textColorHint="@color/white"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold" />

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/spin_kit_reset"
        style="@style/SpinKitView.Large.Wave"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:SpinKit_Color="@color/purple_200" />


</LinearLayout>